Revision history for Devel-Trace-Subs

0.25 UNREL
    - Add install of Devel::Examine::Subs in CI

0.24    2022-02-09
    - Removed Travis CI config file
    - Code reformatting
    - Fix install/remove tests due to updated Devel::Examine::Subs
      error string changes
    - Fix CI badge links (were pointing to devel-examine-subs)

0.23    2022-02-09
    - Devel::Examine::Subs is no longer a prereq. install_trace() and
      remove_trace() will die if it isn't available
    - Added support for Github Actions and removed Travis-CI
    - POD updates

0.22    2016-01-18
    - no functional code changes
    - bumped prereq of Devel::Examine::Subs to 1.61 due to bug introduced
      into previous version, breaking tests

0.21    2016-01-04
    - no functional code changes
    - modified tests to work with DES 1.55 through 1.58 (CPAN Testers
      failure)
    - bumped req ver of DES to 1.58
    - build now requires Mock::Sub, due to adding significant tests for
      coverage

0.20    2015-10-29
    - DES is now loaded from within eval() in install and remove only. This fixes
      a bug where if DTS was loaded in a script before anything that uses DES,
      *trace() would get clobbered and would be unavailable
    - removed various PREREQ_PMs that are no longer required

0.19    2015-10-23
    - modified pod to reflect Devel::Examine::Subs API change in
      handling 'extensions'. We now accept anything that File::Find::Rule::name()
      accepts within this param
    - numerous tests added to test against extension param functionality

0.18    2015-10-23
    - no functional changes
    - refactored to work on perl v5.8+, previously we only ran on
      v5.12+

0.17    2015-09-30
    - bumped DES req to 1.54

0.16    2015-09-30
    - setting $ENV{DTS_FLUSH_FLOW} = 1 will now output a single line
      of codeflow info each time trace() is called
    - bumped DES req to 1.45 due to Symbol bug

0.12    2015-09-17
    - min perl ver required: 5.12