@@ -403,48 +403,9 @@ Install into all C<*.pm> files in a directory structure:
                 extensions => ['*.pm'],
              );
 
-
 =head1 AUTHOR
 
 Steve Bertrand, C<< <steveb at cpan.org> >>
-
-=head1 BUGS
-
-Please report any bugs or feature requests to C<bug-devel-trace-flow at
-rt.cpan.org>, or through the web interface at
-L<http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Devel-Trace-Subs>.  I will
-be notified, and then you'll automatically be notified of progress on your
-bug as I make changes.
-
-=head1 REPOSITORY
-
-L<https://github.com/stevieb9/devel-trace-subs>
-
-=head1 BUILD REPORTS
-
-CPAN Testers: L<http://matrix.cpantesters.org/?dist=Devel-Trace-Subs>
-
-=head1 SUPPORT
-
-You can find documentation for this module with the perldoc command.
-
-    perldoc Devel::Trace::Subs
-
-
-You can also look for information at:
-
-=over 4
-
-=item * RT: CPAN's request tracker (report bugs here)
-
-L<http://rt.cpan.org/NoAuth/Bugs.html?Dist=Devel-Trace-Subs>
-
-=item * Search CPAN
-
-L<http://search.cpan.org/dist/Devel-Trace-Subs/>
-
-=back
-
 
 =head1 LICENSE AND COPYRIGHT
 
@@ -455,7 +416,6 @@ under the terms of either: the GNU General Public License as published
 by the Free Software Foundation; or the Artistic License.
 
 See L<http://dev.perl.org/licenses/> for more information.
-
 
 =cut
 
